--- a/index.html
+++ b/index.html
@@ -28,10 +28,25 @@
 
 <body class="home-page">
   <main>
+    <div class="corner-triangle"></div>
+    <div class="hero-visual"></div>
     <div class="main-title">
-      <h1>bonjour, hi</h1>
+      <h3>bonjour, hi</h3>
+    </div>
+    <div class="business-card">
+      <img src="img/common/cd_icon_green.png" alt=""></img>
+      <article>
+        <h2>Creative Dev</h2>
+        <h1>CD-BASH</h1>
+      </article>
     </div>
   </main>
+
+  <footer>
+    <div class="logs-title">
+      <h6>Last Logs</h6>
+    </div>
+  </footer>
 
   <script src="js/app.js"></script>
 </body>
