--- a/index.html
+++ b/index.html
@@ -1,54 +1,22 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + TS</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
+  </head>
+  <body class="home-page">
+    <script type="module" src="/src/main.ts"></script>
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
-</head>
-
-<body class="home-page">
-  <main>
-    <div class="corner-triangle"></div>
-    <div class="hero-visual"></div>
-    <div class="main-title">
-      <h3>bonjour, hi</h3>
-    </div>
-    <div class="business-card">
-      <img src="img/common/cd_icon_green.png" alt=""></img>
-      <article>
-        <h2>Creative Dev</h2>
-        <h1>CD-BASH</h1>
-      </article>
-    </div>
-  </main>
-
-  <footer>
-    <div class="logs-title">
-      <h6>Last Logs</h6>
-    </div>
-  </footer>
-
-  <script src="js/app.js"></script>
-</body>
-
+    <footer>
+      <div class="logs-title">
+        <h6>Last Logs</h6>
+      </div>
+    </footer>
+  </body>
 </html>
