wip: vertical navigation box integration

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+  <head id="main">
+    <title>CD-BASH</title>
+    <script type="module" src="/src/heads/default.ts"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
+
   </head>
   <body class="home-page">
-    <script type="module" src="/src/main.ts"></script>
+  <body class="home-page">
+    <script type="module" src="/src/index.ts"></script>
 
     <footer>
       <div class="logs-title">
