wip: refactor directories

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head id="main">
-    <title>CD-BASH</title>
+    <title>cd-bash</title>
     <script type="module" src="/src/heads/default.ts"></script>
 
 
