--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head id="main">
     <title>cd-bash</title>
     <script type="module" src="/src/heads/default.ts"></script>
-
-
   </head>
-  <body class="home-page">
+
+  <body>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
